--- a/theme/main.css
+++ b/theme/main.css
@@ -49,8 +49,7 @@ main>section>ul {
     flex-direction: row;
     justify-content: space-evenly;
     align-content:space-between;
-    flex-wrap:
-    wrap;
+    flex-wrap:wrap;
     list-style-type: none;
 }
 
@@ -74,7 +73,7 @@ main>section>h2{
     text-align : center;
 }
 
-main #todo{
+main #toDo{
     background-color:orange;
     position:relative;
 }
@@ -89,7 +88,7 @@ main #ajouterBtn{
     font-size:48px;
 }
 
-main #done{
+main #Done{
     background-color: yellowgreen;
 }
 
